--- a/generate.vcxproj
+++ b/generate.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Excel\ProcessExcel.c" />
     <ClCompile Include="Source\main.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -92,7 +93,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\libxl\include_c</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -111,7 +112,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\libxl\include_c</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -132,7 +133,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\libxl\include_c</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -155,7 +156,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\libxl\include_c</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
