--- a/generate.vcxproj
+++ b/generate.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Excel\ProcessExcel.c" />
+    <ClCompile Include="Source\log\log.c" />
     <ClCompile Include="Source\main.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -93,7 +94,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\log</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -112,7 +113,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\log</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -133,7 +134,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\log</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -156,7 +157,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\log</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
