--- a/generate.vcxproj
+++ b/generate.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Excel\ProcessExcel.c" />
+    <ClCompile Include="Source\file\GenPinmux_100pin.c" />
     <ClCompile Include="Source\log\log.c" />
     <ClCompile Include="Source\main.c" />
   </ItemGroup>
@@ -94,7 +95,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\log</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\file;.\Source\log</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -113,7 +114,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\log</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\file;.\Source\log</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -134,7 +135,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\log</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\file;.\Source\log</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -157,7 +158,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\log</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\Source\include_common;.\Source\Excel;.\Source\libxl\include_c;.\Source\file;.\Source\log</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
